# CTPD-project

./: .cursorignore  .gitignore  README.md  code doc.md  datastat.py  pklvisualizer.py  pp.md  pyproject.toml  requirements.txt
scripts/mimic3/: GPUExperiment.py  note_baselines.sh  run_note_baselines.py  train_copula_ihm.sh  train_ctpd_ihm.sh  train_ctpd_los.sh  train_ctpd_pheno.sh  train_mimic3.py  ts_baselines.sh
scripts/mimic4/: create_prototypes.py  embedding_mimic4.py  evaluate_mimic4.py  evaluate_multimodal.py  extract_pretrained_embs.py  pretrain_mimic4.py  run_img_baselines.py  train_mimic4.py  train_pocmp.sh
src/cmehr/: paths.py
src/cmehr/backbone/time_series/: __init__.py  fcn.py  inceptiontime.py  pooling.py  resnet.py
src/cmehr/backbone/vision/: __init__.py  encoder.py  model.py  pretrained.py  resnet.py  transformer.py
src/cmehr/dataset/: __init__.py  mimic3_downstream_datamodule.py  mimic3_pretraining_datamodule.py  mimic4_downstream_datamodule.py  mimic4_pretraining_datamodule.py
src/cmehr/models/common/: dilated_conv.py  linear_finetuner.py  model_PANTHER.py  multimodal_fusion.py
src/cmehr/models/mimic3/: base_model.py  bert_modules.py  cnn_model.py  copula.py  ctpd_model.py  flat_model.py  ftlstm_model.py  grud_model.py  mtand_model.py  tlstm_model.py  transformer_model.py
src/cmehr/models/mimic4/: UTDE_cxr_model.py  UTDE_model.py  UTDE_modules.py  __init__.py  base_model.py  camelot_model.py  cnn_model.py  dgm2_model.py  diffem_model.py  grud_model.py  (+14 more)
src/cmehr/utils/: evaluation_utils.py  file_utils.py  soft_ts_losses.py  timelags.py
(+64 files in other folders)
